 * Terrains:
   * Removed unit elevation from N-S hanging bridges
   * Added unit elevation to NW-SE and SW-NE stone chasm bridges
   * Added unit elevation to NW-SE and SW-NE plank bridges
   * Hanging, stone chasm, and plank bridges are now displayed in-game simply
     as "Bridge", retaining their descriptive names in the editor as per
     convention.
 * User interface:
   * GUI2:
     * stacked_widget can optionally display a single layer at a time. This
       may be used to implement dialogs with multiple pages or tabs.
     * Widgets which are children of invisible or hidden parents can no longer
       be interacted with even if the children themselves are still internally
       visible.
     * Added support for tristate buttons/toggle panels or more generally n-state buttons/toggle panels
   * Added a version dialog button to the title screen, replacing the Paths
     option previously found in Preferences -> General.
 * WML engine:
   * Added support for mod_x,mod_y= in [terrain_graphics].
   * Added support for has_flag= in terrain graphics [variant].
   * Added category= to [label] - allows grouping labels so that players can
     show/hide them
   * Add female_text= to [animate_unit] and [unstore_unit] for easier translating
   * AMLAs in [modifications] now use [advancement] tags instead of [advance] tags.
     This means you can add an AMLA to placed unit by simply using its definition macro,
     for example {AMLA_DEFAULT}.
   * [get/set_global_variable]'s side= attribute now defaults to "global" (bug #23686)
   * [team] share_view=yes/no, share_maps=yes/no was replaced with share_vision=all/shroud/none
   * Add exclude_amla= key in [advancement] which disables the advancment if the unit
     has already taken certain other advancements.
   * The WML preprocessor now writes warnings to stderr for macros redefined
     without #undef, to help detect unintentional name clashes.