@@ -422,6 +422,24 @@ SYNCED_COMMAND_HANDLER_FUNCTION(debug_unit, child,  use_undo, /*show*/, /*error_
 				break;
 			}
 		}
+	} else if (name == "status" ) {
+		config cfg;
+		i->write(cfg);
+		resources::units->erase(loc);
+		config& statuses = cfg.child_or_add("status");
+		BOOST_FOREACH(std::string status, utils::split(value)) {
+			bool add = true;
+			if (status.length() >= 1 && status[0] == '-') {
+				add = false;
+				status = status.substr(1);
+			}
+			if (status.empty()) {
+				continue;
+			}
+			statuses[status] = add;
+		}
+		unit new_u(cfg, true);
+		resources::units->add(loc, new_u);
 	} else {
 		config cfg;
 		i->write(cfg);
