@@ -42,6 +42,7 @@ Version 1.13.1+dev:
      as "Bridge", retaining their descriptive names in the editor as per
      convention.
  * User interface:
+   * Add "unit status=..." command to debug console to add/remove unit statuses
    * GUI2:
      * stacked_widget can optionally display a single layer at a time. This
        may be used to implement dialogs with multiple pages or tabs.
